--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
+title:              Jueun's Blog
+email:              oioioi@gmail.com
+description:        I'm interested in solving problems of object detection using deep
 author:             Start Bootstrap
 url:                "https://jueun036.github.io"
 
